--- a/image.yaml
+++ b/image.yaml
@@ -12,6 +12,7 @@
   osbs:      
     configuration:
       container:
+        image_build_method: imagebuilder
         platforms:
           only:
             - x86_64
@@ -45,6 +46,7 @@
           modules:
           - module: github.com/kiegroup/kie-cloud-operator
             archive: kie-cloud-operator.tar.gz
+        image_build_method: imagebuilder
         platforms:
           only:
             - x86_64
