--- a/image-bundle.yaml
+++ b/image-bundle.yaml
@@ -36,7 +36,7 @@ labels:
     value: "true"
   - name: com.redhat.openshift.versions
     # change to this label for 7.10+ releases ?? # value: v4.7
-    value: v4.5,v4.6
+    value: v4.6
 modules:
   repositories:
     - path: deploy/olm-catalog/prod
