--- a/deploy/crs/v2/snippets/prior_version.yaml
+++ b/deploy/crs/v2/snippets/prior_version.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     consoleDesc: Use this snippet to deploy a prior product version
     consoleName: snippet-prior-version
-    consoleSnippet: "true"
+    consoleSnippet: true
     consoleTitle: Prior Product Version
   name: prior-version
 spec:
