[RHPAM-3245] - Change resource requirements for BC and KIE Server See: https://issues.redhat.com/browse/RHPAM-3245
Signed-off-by: Tarun Khandelwal <tarkhand@redhat.com>

--- a/deploy/crds/kieapp.crd.yaml
+++ b/deploy/crds/kieapp.crd.yaml
@@ -537,8 +537,7 @@ spec:
                           gcMaxMetaspaceSize:
                             description: The maximum metaspace size unit, unit could
                               be g (Giga) m (Mega) or k (kilo)  e.g. '400m'
-                            format: int32
-                            type: integer
+                            type: string
                           gcMinHeapFreeRatio:
                             description: Minimum percentage of heap free after GC
                               to avoid expansion. e.g. '20'
@@ -1269,8 +1268,7 @@ spec:
                             gcMaxMetaspaceSize:
                               description: The maximum metaspace size unit, unit could
                                 be g (Giga) m (Mega) or k (kilo)  e.g. '400m'
-                              format: int32
-                              type: integer
+                              type: string
                             gcMinHeapFreeRatio:
                               description: Minimum percentage of heap free after GC
                                 to avoid expansion. e.g. '20'
@@ -2119,8 +2117,7 @@ spec:
                               gcMaxMetaspaceSize:
                                 description: The maximum metaspace size unit, unit
                                   could be g (Giga) m (Mega) or k (kilo)  e.g. '400m'
-                                format: int32
-                                type: integer
+                                type: string
                               gcMinHeapFreeRatio:
                                 description: Minimum percentage of heap free after
                                   GC to avoid expansion. e.g. '20'
@@ -2876,8 +2873,7 @@ spec:
                                 gcMaxMetaspaceSize:
                                   description: The maximum metaspace size unit, unit
                                     could be g (Giga) m (Mega) or k (kilo)  e.g. '400m'
-                                  format: int32
-                                  type: integer
+                                  type: string
                                 gcMinHeapFreeRatio:
                                   description: Minimum percentage of heap free after
                                     GC to avoid expansion. e.g. '20'
