--- a/config/7.9.1/envs/rhpam-trial.yaml
+++ b/config/7.9.1/envs/rhpam-trial.yaml
@@ -9,6 +9,9 @@ console:
               - name: "[[.ApplicationName]]-[[.Console.Name]]"
                 env:
                   - name: KIE_SERVER_HOST
+                resources:
+                  limits:
+                    memory: 2Gi
             volumes:
               - name: "[[.ApplicationName]]-[[.Console.Name]]-pvol"
                 emptyDir: {}
