--- a/config/7.9.1/envs/rhpam-trial.yaml
+++ b/config/7.9.1/envs/rhpam-trial.yaml
@@ -75,6 +75,9 @@ servers:
                       value: "Access-Control-Max-Age"
                     - name: AC_MAX_AGE_FILTER_RESPONSE_HEADER_VALUE
                       value: "1"
+                  resources:
+                    limits:
+                      memory: 1Gi
     ## KIE server deployment config END
     ## KIE server route BEGIN
     routes:
