--- a/deploy/olm-catalog/dev/7.9.1/manifests/businessautomation-operator.7.9.1.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.9.1/manifests/businessautomation-operator.7.9.1.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.9.1
-    createdAt: "2020-10-27 14:01:46"
+    createdAt: "2020-11-10 12:40:34"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.9.1-dev-cpglhmf98c
+  name: businessautomation-operator.7.9.1-dev-c7g4mrvkdk
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -446,7 +446,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.9.1-dev-cpglhmf98c
+    operated-by: businessautomation-operator.7.9.1-dev-c7g4mrvkdk
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -547,9 +547,9 @@ spec:
     name: amq-broker
   - image: registry.redhat.io/amq7/amq-broker:7.7
     name: amq-broker
-  replaces: businessautomation-operator.7.9.0
+  replaces: businessautomation-operator.7.9.0-2
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.9.1-dev-cpglhmf98c
-  version: 7.9.1+cpglhmf98c
+      operated-by: businessautomation-operator.7.9.1-dev-c7g4mrvkdk
+  version: 7.9.1+c7g4mrvkdk
