--- a/deploy/olm-catalog/prod/7.9.1/manifests/businessautomation-operator.7.9.1.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/prod/7.9.1/manifests/businessautomation-operator.7.9.1.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry.redhat.io/rhpam-7/rhpam-rhel8-operator:7.9.1
-    createdAt: "2020-10-27 14:01:46"
+    createdAt: "2020-11-10 12:40:34"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -547,7 +547,7 @@ spec:
     name: amq-broker
   - image: registry.redhat.io/amq7/amq-broker:7.7
     name: amq-broker
-  replaces: businessautomation-operator.7.9.0
+  replaces: businessautomation-operator.7.9.0-2
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
