--- a/config/7.9.1/common.yaml
+++ b/config/7.9.1/common.yaml
@@ -45,15 +45,25 @@ console:
                     path: /rest/healthy
                     port: 8080
                     scheme: HTTP
+                  initialDelaySeconds: 90
+                  timeoutSeconds: 2
+                  periodSeconds: 15
+                  failureThreshold: 10
+                startupProbe:
+                  httpGet:
+                    path: /rest/healthy
+                    port: 8080
+                    scheme: HTTP
                   initialDelaySeconds: 180
                   timeoutSeconds: 2
                   periodSeconds: 15
+                  failureThreshold: 36
                 readinessProbe:
                   httpGet:
                     path: /rest/ready
                     port: 8080
                     scheme: HTTP
-                  initialDelaySeconds: 30
+                  initialDelaySeconds: 60
                   timeoutSeconds: 2
                   periodSeconds: 5
                   failureThreshold: 36
