--- a/deploy/olm-catalog/dev/7.10.0/manifests/businessautomation-operator.7.10.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.10.0/manifests/businessautomation-operator.7.10.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.10.0
-    createdAt: "2020-11-17 09:28:05"
+    createdAt: "2020-11-18 09:43:02"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.10.0-dev-jb2qnbkd8g
+  name: businessautomation-operator.7.10.0-dev-z9f56jgfvb
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -295,14 +295,6 @@ spec:
           - update
           - watch
         - apiGroups:
-          - ""
-          resources:
-          - bindings
-          - endpoints
-          - podtemplates
-          verbs:
-          - list
-        - apiGroups:
           - apps
           resources:
           - deployments
@@ -375,7 +367,6 @@ spec:
           - image.openshift.io
           resources:
           - images
-          - imagetags
           - imagestreams
           - imagestreamimages
           - imagestreamtags
@@ -407,11 +398,9 @@ spec:
           - monitoring.coreos.com
           resources:
           - servicemonitors
-          - prometheusrules
           verbs:
           - get
           - create
-          - list
         - apiGroups:
           - operators.coreos.com
           resources:
@@ -446,7 +435,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.10.0-dev-jb2qnbkd8g
+    operated-by: businessautomation-operator.7.10.0-dev-z9f56jgfvb
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -551,5 +540,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.10.0-dev-jb2qnbkd8g
-  version: 7.10.0+jb2qnbkd8g
+      operated-by: businessautomation-operator.7.10.0-dev-z9f56jgfvb
+  version: 7.10.0+z9f56jgfvb
