--- a/deploy/olm-catalog/dev/7.10.0/manifests/businessautomation-operator.7.10.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.10.0/manifests/businessautomation-operator.7.10.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.10.0
-    createdAt: "2020-12-08 09:56:01"
+    createdAt: "2021-01-06 08:56:56"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.10.0-dev-h8zqrlh6xj
+  name: businessautomation-operator.7.10.0-dev-gvpgvkqqx6
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -168,105 +168,105 @@ spec:
                   value: "true"
                 - name: DEBUG
                   value: "false"
-                - name: DM_KIESERVER_IMAGE_7.9.1
+                - name: RELATED_IMAGE_DM_KIESERVER_IMAGE_7.9.1
                   value: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.9.1
-                - name: DM_CONTROLLER_IMAGE_7.9.1
+                - name: RELATED_IMAGE_DM_CONTROLLER_IMAGE_7.9.1
                   value: registry.redhat.io/rhdm-7/rhdm-controller-rhel8:7.9.1
-                - name: DM_DC_IMAGE_7.9.1
+                - name: RELATED_IMAGE_DM_DC_IMAGE_7.9.1
                   value: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.9.1
-                - name: PAM_KIESERVER_IMAGE_7.9.1
+                - name: RELATED_IMAGE_PAM_KIESERVER_IMAGE_7.9.1
                   value: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.9.1
-                - name: PAM_CONTROLLER_IMAGE_7.9.1
+                - name: RELATED_IMAGE_PAM_CONTROLLER_IMAGE_7.9.1
                   value: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.9.1
-                - name: PAM_BC_IMAGE_7.9.1
+                - name: RELATED_IMAGE_PAM_BC_IMAGE_7.9.1
                   value: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.9.1
-                - name: PAM_BC_MONITORING_IMAGE_7.9.1
+                - name: RELATED_IMAGE_PAM_BC_MONITORING_IMAGE_7.9.1
                   value: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.9.1
-                - name: PAM_SMARTROUTER_IMAGE_7.9.1
+                - name: RELATED_IMAGE_PAM_SMARTROUTER_IMAGE_7.9.1
                   value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.9.1
-                - name: PAM_PROCESS_MIGRATION_IMAGE_7.9.1
+                - name: RELATED_IMAGE_PAM_PROCESS_MIGRATION_IMAGE_7.9.1
                   value: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.9.1
-                - name: OSE_CLI_IMAGE_7.9.1
+                - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.9.1
                   value: registry.redhat.io/openshift3/ose-cli:v3.11
-                - name: MYSQL_PROXY_IMAGE_7.9.1
+                - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.9.1
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
-                - name: POSTGRESQL_PROXY_IMAGE_7.9.1
+                - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.9.1
                   value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
-                - name: DATAGRID_IMAGE_7.9.1
+                - name: RELATED_IMAGE_DATAGRID_IMAGE_7.9.1
                   value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
-                - name: BROKER_IMAGE_7.9.1
+                - name: RELATED_IMAGE_BROKER_IMAGE_7.9.1
                   value: registry.redhat.io/amq7/amq-broker:7.7
-                - name: DM_KIESERVER_IMAGE_7.9.0
+                - name: RELATED_IMAGE_DM_KIESERVER_IMAGE_7.9.0
                   value: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.9.0
-                - name: DM_CONTROLLER_IMAGE_7.9.0
+                - name: RELATED_IMAGE_DM_CONTROLLER_IMAGE_7.9.0
                   value: registry.redhat.io/rhdm-7/rhdm-controller-rhel8:7.9.0
-                - name: DM_DC_IMAGE_7.9.0
+                - name: RELATED_IMAGE_DM_DC_IMAGE_7.9.0
                   value: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.9.0
-                - name: PAM_KIESERVER_IMAGE_7.9.0
+                - name: RELATED_IMAGE_PAM_KIESERVER_IMAGE_7.9.0
                   value: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.9.0
-                - name: PAM_CONTROLLER_IMAGE_7.9.0
+                - name: RELATED_IMAGE_PAM_CONTROLLER_IMAGE_7.9.0
                   value: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.9.0
-                - name: PAM_BC_IMAGE_7.9.0
+                - name: RELATED_IMAGE_PAM_BC_IMAGE_7.9.0
                   value: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.9.0
-                - name: PAM_BC_MONITORING_IMAGE_7.9.0
+                - name: RELATED_IMAGE_PAM_BC_MONITORING_IMAGE_7.9.0
                   value: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.9.0
-                - name: PAM_SMARTROUTER_IMAGE_7.9.0
+                - name: RELATED_IMAGE_PAM_SMARTROUTER_IMAGE_7.9.0
                   value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.9.0
-                - name: PAM_PROCESS_MIGRATION_IMAGE_7.9.0
+                - name: RELATED_IMAGE_PAM_PROCESS_MIGRATION_IMAGE_7.9.0
                   value: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.9.0
-                - name: OSE_CLI_IMAGE_7.9.0
+                - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.9.0
                   value: registry.redhat.io/openshift3/ose-cli:v3.11
-                - name: MYSQL_PROXY_IMAGE_7.9.0
+                - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.9.0
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
-                - name: POSTGRESQL_PROXY_IMAGE_7.9.0
+                - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.9.0
                   value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
-                - name: DATAGRID_IMAGE_7.9.0
+                - name: RELATED_IMAGE_DATAGRID_IMAGE_7.9.0
                   value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
-                - name: BROKER_IMAGE_7.9.0
+                - name: RELATED_IMAGE_BROKER_IMAGE_7.9.0
                   value: registry.redhat.io/amq7/amq-broker:7.7
-                - name: DM_KIESERVER_IMAGE_7.10.0
+                - name: RELATED_IMAGE_DM_KIESERVER_IMAGE_7.10.0
                   value: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.10.0
-                - name: DM_CONTROLLER_IMAGE_7.10.0
+                - name: RELATED_IMAGE_DM_CONTROLLER_IMAGE_7.10.0
                   value: registry.redhat.io/rhdm-7/rhdm-controller-rhel8:7.10.0
-                - name: DM_DC_IMAGE_7.10.0
+                - name: RELATED_IMAGE_DM_DC_IMAGE_7.10.0
                   value: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.10.0
-                - name: PAM_KIESERVER_IMAGE_7.10.0
+                - name: RELATED_IMAGE_PAM_KIESERVER_IMAGE_7.10.0
                   value: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.10.0
-                - name: PAM_CONTROLLER_IMAGE_7.10.0
+                - name: RELATED_IMAGE_PAM_CONTROLLER_IMAGE_7.10.0
                   value: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.10.0
-                - name: PAM_BC_IMAGE_7.10.0
+                - name: RELATED_IMAGE_PAM_BC_IMAGE_7.10.0
                   value: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.10.0
-                - name: PAM_BC_MONITORING_IMAGE_7.10.0
+                - name: RELATED_IMAGE_PAM_BC_MONITORING_IMAGE_7.10.0
                   value: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.10.0
-                - name: PAM_SMARTROUTER_IMAGE_7.10.0
+                - name: RELATED_IMAGE_PAM_SMARTROUTER_IMAGE_7.10.0
                   value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.10.0
-                - name: PAM_PROCESS_MIGRATION_IMAGE_7.10.0
+                - name: RELATED_IMAGE_PAM_PROCESS_MIGRATION_IMAGE_7.10.0
                   value: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.10.0
-                - name: OSE_CLI_IMAGE_7.10.0
+                - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.10.0
                   value: registry.redhat.io/openshift3/ose-cli:v3.11
-                - name: MYSQL_PROXY_IMAGE_7.10.0
+                - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.10.0
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
-                - name: POSTGRESQL_PROXY_IMAGE_7.10.0
+                - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.10.0
                   value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
-                - name: DATAGRID_IMAGE_7.10.0
+                - name: RELATED_IMAGE_DATAGRID_IMAGE_7.10.0
                   value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
-                - name: BROKER_IMAGE_7.10.0
+                - name: RELATED_IMAGE_BROKER_IMAGE_7.10.0
                   value: registry.redhat.io/amq7/amq-broker:7.8
-                - name: OAUTH_PROXY_IMAGE_LATEST
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_LATEST
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:latest
-                - name: OAUTH_PROXY_IMAGE_4.6
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.6
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.6
-                - name: OAUTH_PROXY_IMAGE_4.5
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.5
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.5
-                - name: OAUTH_PROXY_IMAGE_4.4
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.4
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.4
-                - name: OAUTH_PROXY_IMAGE_4.3
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.3
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.3
-                - name: OAUTH_PROXY_IMAGE_4.2
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.2
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.2
-                - name: OAUTH_PROXY_IMAGE_4.1
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.1
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.1
-                - name: OAUTH_PROXY_IMAGE_3
+                - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_3
                   value: registry.redhat.io/openshift3/oauth-proxy:latest
                 image: quay.io/kiegroup/kie-cloud-operator:7.10.0
                 imagePullPolicy: Always
@@ -435,7 +435,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.10.0-dev-h8zqrlh6xj
+    operated-by: businessautomation-operator.7.10.0-dev-gvpgvkqqx6
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -447,98 +447,9 @@ spec:
   maturity: dev
   provider:
     name: Red Hat
-  relatedImages:
-  - image: quay.io/kiegroup/kie-cloud-operator:7.10.0
-    name: kie-cloud-operator
-  - image: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.9.1
-    name: rhdm-kieserver-rhel8
-  - image: registry.redhat.io/rhdm-7/rhdm-controller-rhel8:7.9.1
-    name: rhdm-controller-rhel8
-  - image: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.9.1
-    name: rhdm-decisioncentral-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.9.1
-    name: rhpam-kieserver-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.9.1
-    name: rhpam-controller-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.9.1
-    name: rhpam-businesscentral-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.9.1
-    name: rhpam-businesscentral-monitoring-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.9.1
-    name: rhpam-smartrouter-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.9.1
-    name: rhpam-process-migration-rhel8
-  - image: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.9.0
-    name: rhdm-kieserver-rhel8
-  - image: registry.redhat.io/rhdm-7/rhdm-controller-rhel8:7.9.0
-    name: rhdm-controller-rhel8
-  - image: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.9.0
-    name: rhdm-decisioncentral-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.9.0
-    name: rhpam-kieserver-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.9.0
-    name: rhpam-controller-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.9.0
-    name: rhpam-businesscentral-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.9.0
-    name: rhpam-businesscentral-monitoring-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.9.0
-    name: rhpam-smartrouter-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.9.0
-    name: rhpam-process-migration-rhel8
-  - image: registry.redhat.io/rhdm-7/rhdm-kieserver-rhel8:7.10.0
-    name: rhdm-kieserver-rhel8
-  - image: registry.redhat.io/rhdm-7/rhdm-controller-rhel8:7.10.0
-    name: rhdm-controller-rhel8
-  - image: registry.redhat.io/rhdm-7/rhdm-decisioncentral-rhel8:7.10.0
-    name: rhdm-decisioncentral-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.10.0
-    name: rhpam-kieserver-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.10.0
-    name: rhpam-controller-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.10.0
-    name: rhpam-businesscentral-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.10.0
-    name: rhpam-businesscentral-monitoring-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.10.0
-    name: rhpam-smartrouter-rhel8
-  - image: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.10.0
-    name: rhpam-process-migration-rhel8
-  - image: registry.redhat.io/openshift4/ose-oauth-proxy:latest
-    name: ose-oauth-proxy
-  - image: registry.redhat.io/openshift4/ose-oauth-proxy:v4.6
-    name: ose-oauth-proxy
-  - image: registry.redhat.io/openshift4/ose-oauth-proxy:v4.5
-    name: ose-oauth-proxy
-  - image: registry.redhat.io/openshift4/ose-oauth-proxy:v4.4
-    name: ose-oauth-proxy
-  - image: registry.redhat.io/openshift4/ose-oauth-proxy:v4.3
-    name: ose-oauth-proxy
-  - image: registry.redhat.io/openshift4/ose-oauth-proxy:v4.2
-    name: ose-oauth-proxy
-  - image: registry.redhat.io/openshift4/ose-oauth-proxy:v4.1
-    name: ose-oauth-proxy
-  - image: registry.redhat.io/openshift3/oauth-proxy:latest
-    name: oauth-proxy
-  - image: registry.redhat.io/openshift3/ose-cli:v3.11
-    name: ose-cli
-  - image: registry.redhat.io/rhscl/mysql-57-rhel7:latest
-    name: mysql-57-rhel7
-  - image: registry.redhat.io/rhscl/mysql-80-rhel7:latest
-    name: mysql-80-rhel7
-  - image: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
-    name: postgresql-10-rhel7
-  - image: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.5
-    name: datagrid73-openshift
-  - image: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
-    name: datagrid73-openshift
-  - image: registry.redhat.io/amq7/amq-broker:7.7
-    name: amq-broker
-  - image: registry.redhat.io/amq7/amq-broker:7.8
-    name: amq-broker
   replaces: businessautomation-operator.7.9.1
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.10.0-dev-h8zqrlh6xj
-  version: 7.10.0+h8zqrlh6xj
+      operated-by: businessautomation-operator.7.10.0-dev-gvpgvkqqx6
+  version: 7.10.0+gvpgvkqqx6
