--- a/deploy/olm-catalog/dev/7.10.0/manifests/businessautomation-operator.7.10.0.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.10.0/manifests/businessautomation-operator.7.10.0.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.10.0
-    createdAt: "2020-11-18 09:43:02"
+    createdAt: "2020-12-08 09:56:01"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.10.0-dev-z9f56jgfvb
+  name: businessautomation-operator.7.10.0-dev-h8zqrlh6xj
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -251,7 +251,7 @@ spec:
                 - name: DATAGRID_IMAGE_7.10.0
                   value: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
                 - name: BROKER_IMAGE_7.10.0
-                  value: registry.redhat.io/amq7/amq-broker:7.7
+                  value: registry.redhat.io/amq7/amq-broker:7.8
                 - name: OAUTH_PROXY_IMAGE_LATEST
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:latest
                 - name: OAUTH_PROXY_IMAGE_4.6
@@ -435,7 +435,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.10.0-dev-z9f56jgfvb
+    operated-by: businessautomation-operator.7.10.0-dev-h8zqrlh6xj
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -532,13 +532,13 @@ spec:
     name: datagrid73-openshift
   - image: registry.redhat.io/jboss-datagrid-7/datagrid73-openshift:1.6
     name: datagrid73-openshift
-  - image: registry.redhat.io/amq7/amq-broker:7.6
-    name: amq-broker
   - image: registry.redhat.io/amq7/amq-broker:7.7
+    name: amq-broker
+  - image: registry.redhat.io/amq7/amq-broker:7.8
     name: amq-broker
   replaces: businessautomation-operator.7.9.1
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.10.0-dev-z9f56jgfvb
-  version: 7.10.0+z9f56jgfvb
+      operated-by: businessautomation-operator.7.10.0-dev-h8zqrlh6xj
+  version: 7.10.0+h8zqrlh6xj
