[RHPAM-3325] reconcile error due to mem conversion and startupProbe
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/config/7.9.1/common.yaml
+++ b/config/7.9.1/common.yaml
@@ -57,6 +57,7 @@ console:
                   initialDelaySeconds: 180
                   timeoutSeconds: 2
                   periodSeconds: 15
+                  successThreshold: 1
                   failureThreshold: 36
                 readinessProbe:
                   httpGet:
