--- a/config/7.10.0/common.yaml
+++ b/config/7.10.0/common.yaml
@@ -57,6 +57,7 @@ console:
                   initialDelaySeconds: 180
                   timeoutSeconds: 2
                   periodSeconds: 15
+                  successThreshold: 1
                   failureThreshold: 36
                 readinessProbe:
                   httpGet:
