--- a/config/7.9.1/envs/rhdm-authoring-ha.yaml
+++ b/config/7.9.1/envs/rhdm-authoring-ha.yaml
@@ -81,9 +81,7 @@ others:
                     - name: SERVICE_PROFILE
                       value: "[[.ApplicationName]]-datagrid"
                     - name: JGROUPS_PING_PROTOCOL
-                      value: openshift.DNS_PING
-                    - name: OPENSHIFT_DNS_PING_SERVICE_NAME
-                      value: "[[.ApplicationName]]-datagrid-ping"
+                      value: kubernetes.KUBE_PING
                     - name: INFINISPAN_CONNECTORS
                       value: "hotrod"
                   image: "[[$.Constants.DatagridImageURL]]"
@@ -208,8 +206,6 @@ others:
                       value: "jmsBrokerUser"
                     - name: AMQ_CLUSTER_PASSWORD
                       value: "[[.AMQClusterPassword]]"
-                    - name: OPENSHIFT_DNS_PING_SERVICE_NAME
-                      value: "[[.ApplicationName]]-amq-ping"
                     - name: AMQ_EXTRA_ARGS
                     - name: AMQ_ANYCAST_PREFIX
                     - name: AMQ_MULTICAST_PREFIX
