[RHPAM-3248] - Provision Dashbuilder image with operator
Signed-off-by: spolti <fspolti@redhat.com>

--- a/config/7.10.0/common.yaml
+++ b/config/7.10.0/common.yaml
@@ -96,6 +96,10 @@ console:
                   - name: GIT_HOOKS_DIR
                     value: "[[.Console.GitHooks.MountPath]]"
                   #[[end]]
+                  #[[if .Dashbuilder.Config.EnableBusinessCentral]]
+                  - name: KIE_DASHBUILDER_RUNTIME_LOCATION
+                    value: "[[.Console.DashbuilderLocation]]"
+                  #[[end]]
                   ## OpenShift Enhancement BEGIN
                   - name: KIE_SERVER_CONTROLLER_OPENSHIFT_ENABLED
                     value: "true"
