--- a/config/7.9.0/envs/rhpam-authoring-ha.yaml
+++ b/config/7.9.0/envs/rhpam-authoring-ha.yaml
@@ -80,12 +80,10 @@ others:
                       value: "[[.ApplicationName]]-datagrid"
                     - name: SERVICE_PROFILE
                       value: "[[.ApplicationName]]-datagrid"
-                    - name: KUBERNETES_NAMESPACE
-                      value: "${KUBERNETES_NAMESPACE}"
-                    - name: KUBERNETES_LABELS
-                      value: "${KUBERNETES_LABELS}"
                     - name: JGROUPS_PING_PROTOCOL
-                      value: "kubernetes.KUBE_PING"
+                      value: openshift.DNS_PING
+                    - name: OPENSHIFT_DNS_PING_SERVICE_NAME
+                      value: "[[.ApplicationName]]-datagrid-ping"
                     - name: INFINISPAN_CONNECTORS
                       value: "hotrod"
                   image: "[[$.Constants.DatagridImageURL]]"
@@ -210,6 +208,8 @@ others:
                       value: "jmsBrokerUser"
                     - name: AMQ_CLUSTER_PASSWORD
                       value: "[[.AMQClusterPassword]]"
+                    - name: OPENSHIFT_DNS_PING_SERVICE_NAME
+                      value: "[[.ApplicationName]]-amq-ping"
                     - name: AMQ_EXTRA_ARGS
                     - name: AMQ_ANYCAST_PREFIX
                     - name: AMQ_MULTICAST_PREFIX
@@ -288,6 +288,40 @@ others:
             service: "[[.ApplicationName]]-amq"
           annotations:
             description: The broker's OpenWire port.
+
+      - spec:
+          clusterIP: None
+          ports:
+            - port: 8888
+              protocol: TCP
+              targetPort: 8888
+          selector:
+            deploymentConfig: "[[.ApplicationName]]-amq"
+        metadata:
+          name: "[[.ApplicationName]]-amq-ping"
+          annotations:
+            description: The JGroups ping port for clustering.
+            service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
+          labels:
+            app: "[[.ApplicationName]]"
+            application: "[[.ApplicationName]]"
+
+      - spec:
+          clusterIP: None
+          ports:
+            - name: ping
+              port: 8888
+              protocol: TCP
+              targetPort: 8888
+          selector:
+            deploymentConfig: "[[.ApplicationName]]-datagrid"
+        metadata:
+          name: "[[.ApplicationName]]-datagrid-ping"
+          labels:
+            application: "[[.ApplicationName]]"
+          annotations:
+            description: "The JGroups ping port for clustering."
+            service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
 
       - spec:
           ports:
