[RHPAM-3320] - Business Central PV size is not configurable in Operator
Signed-off-by: spolti <fspolti@redhat.com>

--- a/config/7.10.0/common.yaml
+++ b/config/7.10.0/common.yaml
@@ -348,7 +348,7 @@ console:
           - ReadWriteMany
         resources:
           requests:
-            storage: "64Mi"
+            storage: [[.Console.PvSize]]
   #[[end]]
   services:
     - spec:
