--- a/config/7.10.0/envs/rhdm-authoring-ha.yaml
+++ b/config/7.10.0/envs/rhdm-authoring-ha.yaml
@@ -13,7 +13,7 @@ console:
           - ReadWriteMany
         resources:
           requests:
-            storage: 1Gi
+            storage: [[.Console.PvSize]]
 
   deploymentConfigs:
     - metadata:
