--- a/config/7.10.0/envs/rhdm-authoring.yaml
+++ b/config/7.10.0/envs/rhdm-authoring.yaml
@@ -31,5 +31,5 @@ console:
           - ReadWriteOnce
         resources:
           requests:
-            storage: 1Gi
+            storage: [[.Console.PvSize]]
 
