--- a/config/7.10.0/envs/rhpam-authoring.yaml
+++ b/config/7.10.0/envs/rhpam-authoring.yaml
@@ -20,5 +20,5 @@ console:
           - ReadWriteOnce
         resources:
           requests:
-            storage: 1Gi
+            storage: [[.Console.PvSize]]
 
