--- a/deploy/olm-catalog/test/7.10.0-1/manifests/businessautomation-operator.7.10.0-1.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/test/7.10.0-1/manifests/businessautomation-operator.7.10.0-1.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "true"
     containerImage: registry-proxy.engineering.redhat.com/rh-osbs/rhpam-7-rhpam-rhel8-operator:7.10.0
-    createdAt: "2021-01-06 10:56:15"
+    createdAt: "2021-01-06 14:37:00"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
     repository: https://github.com/kiegroup/kie-cloud-operator
@@ -17,7 +17,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.10.0-1-dev-gjrl7226jl
+  name: businessautomation-operator.7.10.0-1-dev-rwsghc6ld7
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -435,7 +435,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.10.0-1-dev-gjrl7226jl
+    operated-by: businessautomation-operator.7.10.0-1-dev-rwsghc6ld7
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -451,5 +451,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.10.0-1-dev-gjrl7226jl
-  version: 7.10.0-1+gjrl7226jl
+      operated-by: businessautomation-operator.7.10.0-1-dev-rwsghc6ld7
+  version: 7.10.0-1+rwsghc6ld7
