[RHPAM-3319] - hard to deploy immutable kie-server with pre-built kjar by KieApp installer See: https://issues.redhat.com/browse/RHPAM-3319
Signed-off-by: Tarun Khandelwal <tarkhand@redhat.com>

--- a/config/7.10.1/envs/rhdm-production-immutable.yaml
+++ b/config/7.10.1/envs/rhdm-production-immutable.yaml
@@ -32,7 +32,7 @@ servers:
 
       ## KIE server deployment config END
     ## KIE server build config BEGIN
-    #[[if .Build.KieServerContainerDeployment]]
+    #[[if .Build.GitSource.URI]]
     imageStreams:
       - metadata:
           name: "[[.KieName]]"
