--- a/config/7.10.1/envs/rhpam-production-immutable.yaml
+++ b/config/7.10.1/envs/rhpam-production-immutable.yaml
@@ -33,7 +33,7 @@ servers:
                       value: "http"
       ## KIE server deployment config END
     ## KIE server build config BEGIN
-    #[[if .Build.KieServerContainerDeployment]]
+    #[[if .Build.GitSource.URI]]
     imageStreams:
       - metadata:
           name: "[[.KieName]]"
